# VC_replan-mcp

./: .env.example  .gitignore  CHANGELOG.md  MCP_SETUP.md  README.md  config.py  pyproject.toml  requirements.txt  server.py
clink_core/: registry.py
config/cli_clients/: claude.json  codex.json  gemini.json
config/systemprompts/claude/: kb_retriever.txt
engine/: __init__.py  kb_retriever.py  kb_writer.py  parser.py  prompt_builder.py  researcher.py  reviewer.py  sanitizer.py
models/: __init__.py  schemas.py
tests/: test_integration.py  test_kb_retriever.py  test_kb_update.py  test_kb_writer.py  test_parser.py  test_prompt_builder.py  test_researcher.py  test_sanitizer.py
tools/: audit.py  kb_update.py
