[project]
name = "vc-replan-mcp"
version = "0.1.6"
description = "Architecture Review MCP Server — 7-dimension audit with KB"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "VCnoC" },
]
readme = "README.md"
keywords = ["mcp", "architecture-review", "code-audit", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "openai>=1.60.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/VCnoC/VC_replan-mcp"
Repository = "https://github.com/VCnoC/VC_replan-mcp"

[project.scripts]
vc-replan-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["*:Zone.Identifier", "**/*:Zone.Identifier"]

[tool.hatch.build.targets.wheel]
packages = ["engine", "models", "tools", "clink_core"]
artifacts = ["server.py", "config.py"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"config.py" = "config.py"
"config/cli_clients" = "config/cli_clients"
"config/systemprompts" = "config/systemprompts"
